--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "devDependencies": {
     "axios": "^1.7.9"
